Google Sites link overhaul
Added link functionality to ALL buttons

some are expected to be broken (IM TIRED)

--- a/home-page.html
+++ b/home-page.html
@@ -277,32 +277,32 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/spirit-week?authuser=1" target="_parent" class="article-title">Spirit Week</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/spirit-week?authuser=1" target="_blank" class="article-title">Spirit Week</a></strong></u>
                 <span class="tooltiptext">A week of different-themed dressdown days! Authors: <i>Liv, Alana, Peyton, Sara</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/harvest-day?authuser=1" target="_parent" class="article-title">Harvest Day</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/harvest-day?authuser=1" target="_blank" class="article-title">Harvest Day</a></strong></u>
                 <span class="tooltiptext">An LS tradition with games, prizes, and all-around fun! Authors: <i>Remy, Everly, Annie, Katie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/washington-d-c-trip?authuser=1" target="_parent" class="article-title">8th Grade Washington D.C. Trip</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/washington-d-c-trip?authuser=1" target="_blank" class="article-title">8th Grade Washington D.C. Trip</a></strong></u>
                 <span class="tooltiptext">All about the Washington D.C. Trip! Authors: <i>Adam, Leo, Zach, Ellen</i></span>
             </span>
         </li>
                        <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/the-council-corner?authuser=1" target="_parent" class="article-title">The Council Corner</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/the-council-corner?authuser=1" target="_blank" class="article-title">The Council Corner</a></strong></u>
                 <span class="tooltiptext">The hottest news from the Student Council! Authors: <i>Gus, Ellen</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/stuco-game-night?authuser=1" target="_parent" class="article-title">StuCo Game Night</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/stuco-game-night?authuser=1" target="_blank" class="article-title">StuCo Game Night</a></strong></u>
                 <span class="tooltiptext">A night of fun games from the Student Council. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/echo-hill-trip?authuser=1" target="_parent" class="article-title">7th Grade Echo Hill Trip</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/echo-hill-trip?authuser=1" target="_blank" class="article-title">7th Grade Echo Hill Trip</a></strong></u>
                 <span class="tooltiptext">All about the 7th Grade Echo Hill Trip. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
@@ -320,17 +320,17 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><strong><u>Fall Polls - Favorite Lunch, Snack, Trends, and Class!</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/fall-polls?authuser=1" target="_blank" class="article-title">Fall Polls - Favorite Lunch, Snack, Trends, and Class!</a></u></strong>
                 <span class="tooltiptext">A mix of polls on the Middle School! Authors: <i>Various (A lot!)</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u>Crossword/Wordsearch and other Puzzles</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/fall-polls?authuser=1" target="_blank" class="article-title">Crossword/Wordsearch and other Puzzles</a></u></strong>
                 <span class="tooltiptext">Various puzzles created by our staff! Made by: <i>Sunishka</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u>Halloween</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/halloween?authuser=1" target="_blank" class="article-title">Halloween</a></u></strong>
                 <span class="tooltiptext">Tricks, treats, and costumes! Authors: <i>Remy, Izzy, Katie, Everly</i></span>
             </span>
         </li>
@@ -348,27 +348,27 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><strong><u>Fall Sports Season Overview</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/fall-season-overview?authuser=1" target="_blank" class="article-title">Fall Sports Season Overview</a></u></strong>
                 <span class="tooltiptext">A summary of the EAMS Fall Athletics! Authors: <i>Emme, Maya, Gus</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u>MS Girls Tennis (Team Spotlight)</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/ms-girls-tennis?authuser=1" target="_blank" class="article-title">MS Girls Tennis (Team Spotlight)</a></u></strong>
                 <span class="tooltiptext">A dive into the MS Girls Tennis team. Authors: <i>Grace, Campbell, Ava, Florrie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u>Girls Volleyball (Team Spotlight)</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/girls-volleyball?authuser=1" target="_blank" class="article-title">Girls Volleyball (Team Spotlight)</a></u></strong>
                 <span class="tooltiptext">All about this year's Girls Volleyball team. Authors: <i>Sunishka, Ellie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u>Girls Soccer (Team Spotlight)</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/girls-soccer?authuser=1" target="_blank" class="article-title">Girls Soccer (Team Spotlight)</a></u></strong>
                 <span class="tooltiptext">Everything there is to know about the Girls Soccer team! Authors: <i>Everly, Annie, Katie, Izzy</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u>AIS/Haverford Day</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/aishaverford-day?authuser=1" target="_blank" class="article-title">AIS/Haverford Day</a></u></strong>
                 <span class="tooltiptext">Everything there is to know about the Girls Soccer team! Authors: <i>Ava, Asha</i></span>
             </span>
         </li>
@@ -386,22 +386,22 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                        <li>
-            <span class="tooltip"><strong><u>Newsies - The Fall Musical</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/newsies?authuser=1" target="_blank" class="article-title">Newsies - The Fall Musical</a></u></strong>
                 <span class="tooltiptext">The MS Fall Musical; here's what you need to know! Authors: <i>Remy, Ellie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u>Jazz Band</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/jazz-band?authuser=1" target="_blank" class="article-title">Jazz Band</a></u></strong>
                 <span class="tooltiptext">An overview of the MS Jazz Band. Author: <i>Leo Wang</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong>Symphonic Band</u></strong>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/symphonic-band?authuser=1" target="_blank" class="article-title">Symphonic Band</a></u></strong>
                 <span class="tooltiptext">The Symphonic band and everything about it. Authors: <i>Adam, Leo, Zach, Ellen</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u>MS Singers</u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/ms-singers?authuser=1" target="_blank" class="article-title">MS Singers</a></u></strong>
                 <span class="tooltiptext">A summary of the MS Singers. What will they perform? Authors: <i>Grace, Florrie</i></span>
             </span>
         </li>
