--- a/home-page.html
+++ b/home-page.html
@@ -287,7 +287,7 @@ document.body.addEventListener('pointerleave', (e) => {
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/washington-d-c-trip?authuser=1" target="_blank" class="article-title">8th Grade Washington D.C. Trip</a></strong></u>
+            <span class="tooltip"><u><strong><a href="washington-dc.html" class="article-title">8th Grade Washington D.C. Trip</a></strong></u>
                 <span class="tooltiptext">All about the Washington D.C. Trip! Authors: <i>Adam, Leo, Zach, Ellen</i></span>
             </span>
         </li>
