--- a/echo-hill.html
+++ b/echo-hill.html
@@ -102,17 +102,18 @@
   <div class="container">
     <h1>Echo Hill</h1>
     <h2 class="author">By Sara Adibi ('31)</h2>
-    <img src="https://dummyimage.com/700x400/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
+    <img src="https://lh3.google.com/u/1/d/1VBGziwBkfkJIfMf7Hyz5tv_x0CsZRYzV=w3270-h1824-iv1?auditContext=thumbnail&auditContext=forDisplay" alt="A new activity at Echo Hill.">
     <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat commodo ante, sed euismod ex malesuada ut. Sed lacinia mi in quam commodo tempus. Vestibulum consequat mollis tellus, id vulputate tortor fringilla vitae. Aliquam mattis lacus mauris, vitae ultrices lacus varius quis. Cras a iaculis nisl. Etiam a placerat metus. Aliquam erat volutpat. Donec tincidunt elit vitae ante pretium, nec feugiat magna imperdiet. Nam varius eros quis ante tempor sagittis. Suspendisse fringilla nunc ac nisi egestas, id pretium dolor consectetur. Vivamus dictum erat dolor, gravida vulputate lorem accumsan non. Vivamus aliquam pellentesque neque non feugiat. Ut ne
+   On Wednesday, October 14th, the seventh-grade class departed for Echo Hill, located in Maryland on the southern side of the Chesapeake Bay. Upon arrival, we were greeted by the Echo Hill staff and shown to our cabins. The cabins, filled with bunk beds, held room for eight students. After dropping off our belongings in our cabins, we started our orientation session, where we learned about our schedule and general important information for our trip.
     </p>
     <p>
-   Quisque id est bibendum, condimentum leo sit amet, sodales ligula. Nullam semper non lectus sit amet ultrices. Vestibulum vel sapien quis nulla ornare consequat in at nibh. Suspendisse volutpat semper dolor in venenatis. Aliquam facilisis pulvinar tortor eget tincidunt. Pellentesque augue metus, scelerisque a tincidunt sodales, tristique fermentum massa. Sed a ligula non nunc dictum vulputate. Cras vitae enim interdum, finibus nulla nec, euismod lacus. Proin pulvinar quis magna sed fermentum. Suspendisse eros tellus, convallis vel scelerisque ut, eleifend nec nibh. Phasellus tristique pulvinar facilisis. Cras maximus non ligula ut placerat. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin tincidunt leo ac neque tempor, dignissim ullamcorper orci ullamcorper.
+   After orientation, we headed over to lunch and learned about the tradition of the slop bucket and our gratitude circle. The slop bucket is a bucket in which we pile our table’s food waste and ultimately measure how much food we wasted. This simple task taught us an important lesson about not wasting food and being grateful for what we have. Before every meal, we gathered in a circle, where people could share gratitude to staff members, friends, or teachers. On the first day after measuring our food waste, we were informed about our walking groups, our activities, and the necessary items for each activity. 
+One such activity was Pathfinders, which was centered on team bonding with our walking group, comfort in the outdoors, and building communication skills. At the end of our first activity, we were given “passports”—a small booklet in which we reflected on the lessons we learned from our various activities. 
+    </p>
+    <p>
+      Other activities offered included Seeds and Weeds, which taught students about different aspects of plants; Garbology, where students examined garbage; Bay Studies, which taught students about the ecology of the Chesapeake Bay by finding and observing fish and crabs; Aquatic Studies, where students caught fish in different areas; Survival, which was a class focused on survival strategies in the wilderness; and Ziplining, which was a fun course built around team bonding. After three hours of partaking in our respective activities, we all had time to enjoy an hour of free time, where we could shower, go down to the beach, gather with our friends at tentside, or explore the campside.
     </p>
     <hr>
-    <p>
-    Nullam euismod orci eget lobortis sagittis. Cras cursus mauris quis urna malesuada porttitor. Proin magna libero, porta in augue vitae, venenatis porta nibh. Quisque facilisis sed orci eu commodo. Aliquam vestibulum accumsan porta. Etiam rutrum luctus porta. Aenean non vulputate dolor. Aliquam pretium ligula enim, sit amet vulputate nisi blandit eget. Aliquam scelerisque auctor nulla non rhoncus. Nam iaculis orci in arcu bibendum ullamcorper. Duis sit amet sagittis urna, id ultricies mauris. In vel justo eu ligula commodo dapibus. In hac habitasse platea dictumst. Nulla facilisi. Ut id massa pulvinar, sagittis nibh eget, dapibus arcu. Maecenas in venenatis quam.
-    </p>
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
     </p>
