--- a/home-page.html
+++ b/home-page.html
@@ -306,6 +306,9 @@ document.body.addEventListener('pointerleave', (e) => {
                 <span class="tooltiptext">All about the 7th Grade Echo Hill Trip. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
+                        <li>
+            <span class="tooltip"<u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/costme-contest?authuser=1" target="_blank" class="article-title">Halloween Costume Contest</a></strong></u>
+                <span class="tooltiptext">A contest in the Middle School for the best costumes! Authors: <i>Sara Adibi, Lindsay Ferry</i></span>
                     </ul>
                 `,
                 author: ""
