--- a/jazz-band.html
+++ b/jazz-band.html
@@ -101,17 +101,50 @@
 <body>
   <div class="container">
     <h1>Jazz Band</h1>
-    <h2 class="author">By [AUTHORS]</h2>
+    <h2 class="author">By Leo Wang ('30)</h2>
     <img src="https://dummyimage.com/700x400/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
     <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat commodo ante, sed euismod ex malesuada ut. Sed lacinia mi in quam commodo tempus. Vestibulum consequat mollis tellus, id vulputate tortor fringilla vitae. Aliquam mattis lacus mauris, vitae ultrices lacus varius quis. Cras a iaculis nisl. Etiam a placerat metus. Aliquam erat volutpat. Donec tincidunt elit vitae ante pretium, nec feugiat magna imperdiet. Nam varius eros quis ante tempor sagittis. Suspendisse fringilla nunc ac nisi egestas, id pretium dolor consectetur. Vivamus dictum erat dolor, gravida vulputate lorem accumsan non. Vivamus aliquam pellentesque neque non feugiat. Ut ne
+   With so many amazing programs, groups, and clubs here at EA, there’s definitely a wide variety of places that people can fit into. If you’re into art, you might go to Art Recess to craft together a masterpiece. On the other hand, if you enjoy tackling difficult problems, the Math Club might be a better option for you. However, there are definitely some notable clubs that stand out, and this article highlights one of them: The MS Jazz Band. Every year, tons of people from all grades try their very best in a one-time audition, judged by none other than Mr. Dankanich himself, for the Jazz Band, playing a piece that they think best demonstrates their ability. This year, there was no shortage of people auditioning, and the number of people who got in was also significantly higher than last year, a clear sign of the growing interest in music and the arts. The Jazz Band is playing two songs this year: <i>Ritmo Cristal</i>, which features a catchy mambo rhythm, and a returning band favorite, <i>Flight of the Foo Birds</i>. Make sure to look out for the Winter Concert in December!
     </p>
     <p>
-   Quisque id est bibendum, condimentum leo sit amet, sodales ligula. Nullam semper non lectus sit amet ultrices. Vestibulum vel sapien quis nulla ornare consequat in at nibh. Suspendisse volutpat semper dolor in venenatis. Aliquam facilisis pulvinar tortor eget tincidunt. Pellentesque augue metus, scelerisque a tincidunt sodales, tristique fermentum massa. Sed a ligula non nunc dictum vulputate. Cras vitae enim interdum, finibus nulla nec, euismod lacus. Proin pulvinar quis magna sed fermentum. Suspendisse eros tellus, convallis vel scelerisque ut, eleifend nec nibh. Phasellus tristique pulvinar facilisis. Cras maximus non ligula ut placerat. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin tincidunt leo ac neque tempor, dignissim ullamcorper orci ullamcorper.
+<strong>YOUR JAZZ BAND THIS YEAR</strong>
     </p>
     <hr>
     <p>
-    Nullam euismod orci eget lobortis sagittis. Cras cursus mauris quis urna malesuada porttitor. Proin magna libero, porta in augue vitae, venenatis porta nibh. Quisque facilisis sed orci eu commodo. Aliquam vestibulum accumsan porta. Etiam rutrum luctus porta. Aenean non vulputate dolor. Aliquam pretium ligula enim, sit amet vulputate nisi blandit eget. Aliquam scelerisque auctor nulla non rhoncus. Nam iaculis orci in arcu bibendum ullamcorper. Duis sit amet sagittis urna, id ultricies mauris. In vel justo eu ligula commodo dapibus. In hac habitasse platea dictumst. Nulla facilisi. Ut id massa pulvinar, sagittis nibh eget, dapibus arcu. Maecenas in venenatis quam.
+    <strong>Woodwinds</strong>
+    </p>
+    <p>
+      Zach Chen
+Caoive Donnelly
+Alexander Bailey
+Leo Wang
+Helmut Dang
+Naya Agarwal
+Victor Tsai
+Alexander Patitucci
+Mak Enakhimion
+Zack Stankewicz
+    </p>
+    <p>
+      <strong>Brass</strong>
+    </p>
+    <p>
+      Aubrey Whitman
+Dev Patel
+Nate Mackey
+Lorenzo Zavatti
+George Wentz
+Viviana Calderon
+Ben Shane
+    </p>
+    <p>
+      <strong>Rhythm/Percussion</strong>
+    </p>
+    <p>
+      Tommy van Binsbergen
+Carl Deirmengian
+Drew Michel
+Robbie Deirmengian
     </p>
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
