--- a/jazz-band.html
+++ b/jazz-band.html
@@ -106,7 +106,7 @@
     <p>
    With so many amazing programs, groups, and clubs here at EA, there’s definitely a wide variety of places that people can fit into. If you’re into art, you might go to Art Recess to craft together a masterpiece. On the other hand, if you enjoy tackling difficult problems, the Math Club might be a better option for you. However, there are definitely some notable clubs that stand out, and this article highlights one of them: The MS Jazz Band. Every year, tons of people from all grades try their very best in a one-time audition, judged by none other than Mr. Dankanich himself, for the Jazz Band, playing a piece that they think best demonstrates their ability. This year, there was no shortage of people auditioning, and the number of people who got in was also significantly higher than last year, a clear sign of the growing interest in music and the arts. The Jazz Band is playing two songs this year: <i>Ritmo Cristal</i>, which features a catchy mambo rhythm, and a returning band favorite, <i>Flight of the Foo Birds</i>. Make sure to look out for the Winter Concert in December!
     </p>
-    <p>
+    <p style="text-align: center;">
 <strong>YOUR JAZZ BAND THIS YEAR</strong>
     </p>
     <hr>
@@ -114,37 +114,37 @@
     <strong>Woodwinds</strong>
     </p>
     <p>
-      Zach Chen
-Caoive Donnelly
-Alexander Bailey
-Leo Wang
-Helmut Dang
-Naya Agarwal
-Victor Tsai
-Alexander Patitucci
-Mak Enakhimion
-Zack Stankewicz
+      Zach Chen,
+Caoive Donnelly,
+Alexander Bailey,
+Leo Wang,
+Helmut Dang,
+Naya Agarwal,
+Victor Tsai,
+Alexander Patitucci,
+Mak Enakhimion,
+and Zack Stankewicz.
     </p>
     <p>
       <strong>Brass</strong>
     </p>
     <p>
-      Aubrey Whitman
-Dev Patel
-Nate Mackey
-Lorenzo Zavatti
-George Wentz
-Viviana Calderon
-Ben Shane
+      Aubrey Whitman,
+Dev Patel,
+Nate Mackey,
+Lorenzo Zavatti,
+George Wentz,
+Viviana Calderon,
+and Ben Shane.
     </p>
     <p>
       <strong>Rhythm/Percussion</strong>
     </p>
     <p>
-      Tommy van Binsbergen
-Carl Deirmengian
-Drew Michel
-Robbie Deirmengian
+      Tommy van Binsbergen,
+Carl Deirmengian,
+Drew Michel,
+and Robbie Deirmengian.
     </p>
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
