--- a/fall-season.html
+++ b/fall-season.html
@@ -101,17 +101,10 @@
 <body>
   <div class="container">
     <h1>Fall Season Sports Overview</h1>
-    <h2 class="author">By [AUTHORS]</h2>
+    <h2 class="author">By Emme ('30), Maya ('30), and Gus ('30).</h2>
     <img src="https://dummyimage.com/700x400/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
     <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat commodo ante, sed euismod ex malesuada ut. Sed lacinia mi in quam commodo tempus. Vestibulum consequat mollis tellus, id vulputate tortor fringilla vitae. Aliquam mattis lacus mauris, vitae ultrices lacus varius quis. Cras a iaculis nisl. Etiam a placerat metus. Aliquam erat volutpat. Donec tincidunt elit vitae ante pretium, nec feugiat magna imperdiet. Nam varius eros quis ante tempor sagittis. Suspendisse fringilla nunc ac nisi egestas, id pretium dolor consectetur. Vivamus dictum erat dolor, gravida vulputate lorem accumsan non. Vivamus aliquam pellentesque neque non feugiat. Ut ne
-    </p>
-    <p>
-   Quisque id est bibendum, condimentum leo sit amet, sodales ligula. Nullam semper non lectus sit amet ultrices. Vestibulum vel sapien quis nulla ornare consequat in at nibh. Suspendisse volutpat semper dolor in venenatis. Aliquam facilisis pulvinar tortor eget tincidunt. Pellentesque augue metus, scelerisque a tincidunt sodales, tristique fermentum massa. Sed a ligula non nunc dictum vulputate. Cras vitae enim interdum, finibus nulla nec, euismod lacus. Proin pulvinar quis magna sed fermentum. Suspendisse eros tellus, convallis vel scelerisque ut, eleifend nec nibh. Phasellus tristique pulvinar facilisis. Cras maximus non ligula ut placerat. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin tincidunt leo ac neque tempor, dignissim ullamcorper orci ullamcorper.
-    </p>
-    <hr>
-    <p>
-    Nullam euismod orci eget lobortis sagittis. Cras cursus mauris quis urna malesuada porttitor. Proin magna libero, porta in augue vitae, venenatis porta nibh. Quisque facilisis sed orci eu commodo. Aliquam vestibulum accumsan porta. Etiam rutrum luctus porta. Aenean non vulputate dolor. Aliquam pretium ligula enim, sit amet vulputate nisi blandit eget. Aliquam scelerisque auctor nulla non rhoncus. Nam iaculis orci in arcu bibendum ullamcorper. Duis sit amet sagittis urna, id ultricies mauris. In vel justo eu ligula commodo dapibus. In hac habitasse platea dictumst. Nulla facilisi. Ut id massa pulvinar, sagittis nibh eget, dapibus arcu. Maecenas in venenatis quam.
+   Athletics are an essential part of life at EA, and we are very fortunate to have so many fall sports options. These include Football, Cross Country, Field Hockey, Girls’ Tennis, Water Polo, Soccer, Girls’ Volleyball, and Fitness. Every student is supported and valued, no matter whether it is their first time trying a new sport or they have years of experience under their belt. Each team works hard during practices and games, showing both dedication and school spirit. Whether it’s cheering from the sidelines or competing on the field, EA students come together to support one another, creating a strong sense of community. After all, sports isn’t just about winning; it’s about growth, friendship, and the excitement of trying your best. Our coaches play a huge role in making our fall sports successful and meaningful. They dedicate their time to countless hours teaching techniques and helping each athlete improve. They not only encourage, but also inspire all of our Middle School athletes and their journeys in their sports. As the season comes to a close, students have learned to build confidence, develop sportsmanship, and work well with their teammates, all while learning important life skills in the EA Middle School community. 
     </p>
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
