--- a/haverfordais-day.html
+++ b/haverfordais-day.html
@@ -100,19 +100,47 @@
 </head>
 <body>
   <div class="container">
-    <h1>Haverford/AIS Day</h1>
+    <h1>Feeling Cold? ...It’s a good thing we got the swEAter!!</h1>
     <h2 class="author">By [AUTHORS]</h2>
-    <img src="https://dummyimage.com/700x400/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
+    <img src="https://lh3.google.com/u/0/d/1s_Dk-CzfmGG9wznHgzBBOU1a8eck7VCw=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="[Optional Caption Text]">
+    <h2>
+   A Note of Inspiration
+    </h2>
     <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat commodo ante, sed euismod ex malesuada ut. Sed lacinia mi in quam commodo tempus. Vestibulum consequat mollis tellus, id vulputate tortor fringilla vitae. Aliquam mattis lacus mauris, vitae ultrices lacus varius quis. Cras a iaculis nisl. Etiam a placerat metus. Aliquam erat volutpat. Donec tincidunt elit vitae ante pretium, nec feugiat magna imperdiet. Nam varius eros quis ante tempor sagittis. Suspendisse fringilla nunc ac nisi egestas, id pretium dolor consectetur. Vivamus dictum erat dolor, gravida vulputate lorem accumsan non. Vivamus aliquam pellentesque neque non feugiat. Ut ne
-    </p>
-    <p>
-   Quisque id est bibendum, condimentum leo sit amet, sodales ligula. Nullam semper non lectus sit amet ultrices. Vestibulum vel sapien quis nulla ornare consequat in at nibh. Suspendisse volutpat semper dolor in venenatis. Aliquam facilisis pulvinar tortor eget tincidunt. Pellentesque augue metus, scelerisque a tincidunt sodales, tristique fermentum massa. Sed a ligula non nunc dictum vulputate. Cras vitae enim interdum, finibus nulla nec, euismod lacus. Proin pulvinar quis magna sed fermentum. Suspendisse eros tellus, convallis vel scelerisque ut, eleifend nec nibh. Phasellus tristique pulvinar facilisis. Cras maximus non ligula ut placerat. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin tincidunt leo ac neque tempor, dignissim ullamcorper orci ullamcorper.
+   As the thrilling AIS/Haverford day draws near, the excitement is among the athletes gearing up for an epic showdown! This historic rivalry, dating back to 1889, began with the first football game between EA and Haverford. It's about more than just games; it’s about pride, passion, and the pursuit of glory to win the sweater. 
+
+This year, the stakes are higher than ever. EA, our spirited co-ed school, is set to take on both Agnes Irwin and Haverford in a fierce battle across all fall sports. Last year, Haverford claimed the glorious sweater, but we’re determined to get it back this year! 
+
+On the boys' side, EA athletes are ready to dominate in soccer, golf, water polo, football, and cross-country. The girls are amped up too, bringing their A-game in field hockey, soccer, tennis, and cross-country. Last year was a rollercoaster ride for the girls as they fought fiercely. They drew 1-1 in field hockey, clinched a thrilling 1-0 victory in soccer, suffered a tough loss in cross-country, yet absolutely crushed the tennis match 7-0! 
+
+With all this momentum, the energy is electric, and anticipation is building. Can EA rise to the occasion and reclaim the sweater? Let’s rally together and show our spirit—this is going to be an unforgettable showdown! 
+
+Now let’s talk about the sweater. This magnificent sweater has been passed between EA and Haverford since 1980. Episcopal Academy snatched the honored sweater first with a complete domination, with a score of 36-2. Wow, that wasn’t even close!
     </p>
     <hr>
+    <h2>
+    The score for the girls
+    </h2>
     <p>
-    Nullam euismod orci eget lobortis sagittis. Cras cursus mauris quis urna malesuada porttitor. Proin magna libero, porta in augue vitae, venenatis porta nibh. Quisque facilisis sed orci eu commodo. Aliquam vestibulum accumsan porta. Etiam rutrum luctus porta. Aenean non vulputate dolor. Aliquam pretium ligula enim, sit amet vulputate nisi blandit eget. Aliquam scelerisque auctor nulla non rhoncus. Nam iaculis orci in arcu bibendum ullamcorper. Duis sit amet sagittis urna, id ultricies mauris. In vel justo eu ligula commodo dapibus. In hac habitasse platea dictumst. Nulla facilisi. Ut id massa pulvinar, sagittis nibh eget, dapibus arcu. Maecenas in venenatis quam.
+      This year, the girls' soccer team won their match 3-1. Amazing passing skills and awesome teamwork. The girls' field hockey team won their match 4-2, with amazing playing skills and making all the shots.  
     </p>
+    <img src="https://lh3.google.com/u/0/d/1JS3ZLPTbkt9ytGBuiUTKZOsRXw50yZYL=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="[Caption Text]">
+    <p>
+      Girls' tennis, let me bring you through it. First singles won, second singles won, third singles lost, and first and second doubles won. They all played great shots and demonstrated great sportsmanship. Lastly, cross country, we won the top 5! But the average we lost. So AIS officially won cross country. Hard opponents, but with amazing perseverance, they all got the job done. 
+
+All the girls' teams played amazingly. Confidence is built when you keep showing up, even on the hard days. You don’t need to be perfect — just brave enough to try. Play with passion, believe in yourself, and never back down. You belong on that court, that field, that track — anywhere your heart tells you to go.
+    </p>
+    <h2>The score for the boys</h2>
+    <p>
+      This year was a very intense year where when it all came down to football! Episcopal Academy snatched the first win in golf with a close score of 176-187. They haven’t beaten Haverford on the Merion West golf course since 2011. Water polo with a close battle of 6-5 to Haverford. The score was 2-2, leaving a lot of pressure on the football team. Can they pull out one more win and take the sweater?!?! It was all up to them. They pulled out an amazing win with complete domination, with a final score of 24-3, which gave the sweater to the Episcopal Academy!!!
+    </p>
+    <hr>
+    <p>The Episcopal Academy had a very successful year with fall sports, bringing home the coveted Banner and the cherished sweater. </p>
+    <img src="https://lh3.google.com/u/0/d/1MISYo3b1z5fziz6F7-8JllXPW9m9HaxC=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="">
+    <img src="https://lh3.google.com/u/0/d/1FS6EU4Uq_Rml5BdgeEjQ__cTQU2pEanP=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="">
+    <img src="https://lh3.google.com/u/0/d/1OTop6YPmZdbvRcwzAZ6VQ8Dx_FqDcsFo=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="">
+    <img src="https://lh3.google.com/u/0/d/1xSNzm-pCg5udbjY5SJy5kCMkbTFf_b7F=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="">
+    <img src="https://lh3.google.com/u/0/d/1A0qrlEauq5mXTkGv00fnUw2jLZxuUZA_=w3270-h1824-iv1?auditContext=thumbnail&auditContext=prefetch" alt="">
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
     </p>
