Article added -- ATTENTION REQUIRED
Article did not mention who they interviewed...

Rq attention

--- a/girls-tennis.html
+++ b/girls-tennis.html
@@ -101,17 +101,55 @@
 <body>
   <div class="container">
     <h1>MS Girls Tennis</h1>
-    <h2 class="author">By [AUTHORS]</h2>
-    <img src="https://dummyimage.com/700x400/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
+    <h2 class="author">By Campbell ('32), Grace ('32), and Ava ('32).</h2>
     <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat commodo ante, sed euismod ex malesuada ut. Sed lacinia mi in quam commodo tempus. Vestibulum consequat mollis tellus, id vulputate tortor fringilla vitae. Aliquam mattis lacus mauris, vitae ultrices lacus varius quis. Cras a iaculis nisl. Etiam a placerat metus. Aliquam erat volutpat. Donec tincidunt elit vitae ante pretium, nec feugiat magna imperdiet. Nam varius eros quis ante tempor sagittis. Suspendisse fringilla nunc ac nisi egestas, id pretium dolor consectetur. Vivamus dictum erat dolor, gravida vulputate lorem accumsan non. Vivamus aliquam pellentesque neque non feugiat. Ut ne
+Tennis is like a cycle: you serve, you struggle, you adapt, you strive, and you sometimes lose, but you always come back for the next point. Middle school girls' tennis is a great opportunity to get involved and try something new. Players can cheer on their teammates, work hard, and have fun at the same time.
+	 The middle school girls' tennis program consists of three teams: A, B, and C teams. The A and B teams have played matches against other schools. They have succeeded in many matches, sometimes losing, but always repeating that cycle: serve, struggle, adapt, strive, and sometimes lose. There are so many important things in tennis: footwork, your swing, and even where you stand on the court. However, the most important part about tennis is trying again and coming back.
+The coaches for tennis have devoted their time to helping us succeed. The coaches this year were: Coach Whalen, Ms. McGill, Ms. Montgomery, Ms. Dragwa, Ms. Yeager, and Ms. Fu.
     </p>
+        <hr>
+<h2>
+  Q&A with an MS Girls Tennis Coach || <strong>(Who did you interview??? Multiple coaches/players??)</strong>
+    </h2>
     <p>
-   Quisque id est bibendum, condimentum leo sit amet, sodales ligula. Nullam semper non lectus sit amet ultrices. Vestibulum vel sapien quis nulla ornare consequat in at nibh. Suspendisse volutpat semper dolor in venenatis. Aliquam facilisis pulvinar tortor eget tincidunt. Pellentesque augue metus, scelerisque a tincidunt sodales, tristique fermentum massa. Sed a ligula non nunc dictum vulputate. Cras vitae enim interdum, finibus nulla nec, euismod lacus. Proin pulvinar quis magna sed fermentum. Suspendisse eros tellus, convallis vel scelerisque ut, eleifend nec nibh. Phasellus tristique pulvinar facilisis. Cras maximus non ligula ut placerat. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin tincidunt leo ac neque tempor, dignissim ullamcorper orci ullamcorper.
-    </p>
-    <hr>
-    <p>
-    Nullam euismod orci eget lobortis sagittis. Cras cursus mauris quis urna malesuada porttitor. Proin magna libero, porta in augue vitae, venenatis porta nibh. Quisque facilisis sed orci eu commodo. Aliquam vestibulum accumsan porta. Etiam rutrum luctus porta. Aenean non vulputate dolor. Aliquam pretium ligula enim, sit amet vulputate nisi blandit eget. Aliquam scelerisque auctor nulla non rhoncus. Nam iaculis orci in arcu bibendum ullamcorper. Duis sit amet sagittis urna, id ultricies mauris. In vel justo eu ligula commodo dapibus. In hac habitasse platea dictumst. Nulla facilisi. Ut id massa pulvinar, sagittis nibh eget, dapibus arcu. Maecenas in venenatis quam.
+Q. What is your favorite thing about coaching tennis
+I like that the group is very small so I get to know the players better. We have beautiful facilities, I love spending time out on the courts!
+
+
+Q. How long have you been coaching tennis
+I have been coaching for 5 full years and the first 3 I coached C team and then I coached A team.
+
+
+Q. What is your least favorite thing about coaching tennis 
+ I don’t like the long bus rides/drives to matches. I also don’t like the cold and when it gets very windy.
+
+
+Q. Have you seen improvement from players this year
+Yes, I have seen tons of improvement especially from the 8th graders over the years.
+
+
+Can you tell me about your coaching experience and background in tennis?
+ Before I came to EA I had no coaching experience, but I watched a lot of tennis.
+
+
+
+
+
+What inspired you to become a tennis coach?
+I coached Boys soccer first but it was not my favorite and I was not very interested. I liked and had more interest in tennis so I switched and I learned so much from the players
+What do you believe are the most important  skills for players to master?
+I believe that hustle is very important. There are moments to relax and slow down but there are also times you must show commitment. 
+
+
+How do you balance technical instruction with keeping tennis fun and engaging?
+
+
+We like to integrate important practice into fun games and drills.
+
+
+How do you handle different player personalities or learning styles?
+Working with singles is easier because you are coaching them directly while it is harder to coach doubles because they must be evenly matched and work well together.
+
     </p>
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
